service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: myapp-ns
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000

  selector:
    app: myapp
